test/sema/typeck/generic/static-method-call-multiple.dora
trait X { static fn foo(): Int32; }
trait Y { static fn foo(): String; }
fn f[T: X + Y]() { T::foo(); }
